data/derived/comb/progs/unify/prog6396.ml.out
Characters 125-138:
  if n = 0 then [remainder] else digitsOfInt n/10 @ [remainder];;
                                 ^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
